<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_community"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/menu_community"
        android:title="@string/community"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_dictionary"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/menu_dictionary"
        android:title="@string/dictionary"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_home"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/menu_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_market"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/menu_market"
        android:title="@string/market"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_settings"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/menu_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>