<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:itemBackground="@color/colorMain"
        app:itemIconTint="@drawable/item_color"
        app:itemTextColor="@drawable/item_color"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/inputNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nickname"
        app:layout_constraintTop_toBottomOf="@+id/plantImg" />

    <EditText
        android:id="@+id/inputSpecies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plant_species"
        app:layout_constraintTop_toBottomOf="@+id/inputStartDate" />

    <EditText
        android:id="@+id/inputOthers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/others"
        app:layout_constraintTop_toBottomOf="@+id/inputSpecies" />

    <EditText
        android:id="@+id/inputStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/startDate"
        app:layout_constraintTop_toBottomOf="@+id/inputNickname" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/plantImg"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/imgErr"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/empty_image"
        tools:srcCompat="@drawable/empty_image" />

    <TextView
        android:id="@+id/nickname"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:gravity="center"
        android:text="@string/nickname"
        app:layout_constraintBottom_toBottomOf="@+id/inputNickname"
        app:layout_constraintEnd_toStartOf="@+id/inputNickname"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inputNickname" />

    <TextView
        android:id="@+id/startDate"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:gravity="center"
        android:text="@string/startDate"
        app:layout_constraintBottom_toBottomOf="@+id/inputStartDate"
        app:layout_constraintEnd_toStartOf="@+id/inputStartDate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inputStartDate" />

    <TextView
        android:id="@+id/plant_species"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:gravity="center"
        android:text="@string/species"
        app:layout_constraintBottom_toBottomOf="@+id/inputSpecies"
        app:layout_constraintEnd_toStartOf="@+id/inputSpecies"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inputSpecies" />

    <TextView
        android:id="@+id/others"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:gravity="center"
        android:text="@string/others"
        app:layout_constraintBottom_toBottomOf="@+id/inputOthers"
        app:layout_constraintEnd_toStartOf="@+id/inputOthers"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inputOthers" />

</androidx.constraintlayout.widget.ConstraintLayout>